--- a/asp_presentaciones/Pages/Ventanas/Huespedes.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Huespedes.cshtml
@@ -221,6 +221,24 @@
                                     <td class="cl_hidden">
                                         @elemento.Apellido
                                     </td>
+                                    <td class="cl_hidden">
+                                        @elemento.Fecha_Naci
+                                    </td>
+                                    <td class="cl_hidden">
+                                        @elemento.Edad
+                                    </td>
+                                    <td class="cl_hidden">
+                                        @elemento.Sexo
+                                    </td>
+                                    <td class="cl_hidden">
+                                        @elemento.Telefono
+                                    </td>
+                                    <td class="cl_hidden">
+                                        @elemento.Correo
+                                    </td>
+                                    <td class="cl_hidden">
+                                        @elemento.Historial_Reserva
+                                    </td>
                                     <td>
                                         <input type="submit"
                                            value="Modicar"
