--- a/asp_presentaciones/Pages/Ventanas/Empleados_ServiciosExtras.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Empleados_ServiciosExtras.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model asp_presentacion.Pages.Ventanas.DistribuidoresModel
+@model asp_presentacion.Pages.Ventanas.Empleados_ServiciosExtrasModel
 @{
     ViewData["Titulo"] = "";
 }
@@ -10,7 +10,7 @@
             @Html.AntiForgeryToken()
 
             <div align="left">
-                <h3>Distribuidores</h3>
+                <h3>Empleados_ServiciosExtras</h3>
             </div>
             <div align="left"
                  class="bt_panel_buttons">
@@ -40,18 +40,20 @@
             Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                    asp-for="@Model.Actual!.Id" />
+                       asp-for="@Model.Actual!.Id_Empleado_ServicioExtra" />
             }
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Codigo" />
+                       asp-for="@Model.Actual!.Id_Empleado_ServicioExtra" />
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Nombre" />
+                   asp-for="@Model.Actual!.Id_empleado" />
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Dirreccion" />
+                   asp-for="@Model.Actual!.Id_ServicioExtra" />
                 <input type="hidden"
-                   asp-for="@Model.Actual!.Telefono" />
+                   asp-for="@Model.Actual!.Pago_Servicio" />
+                <input type="hidden"
+                       asp-for="@Model.Actual!.Precio_Servicio" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
@@ -62,42 +64,52 @@
                     <div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Codigo
+                                Id_Empleado_ServicioExtra
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmEstudiante"
                                    class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.Codigo" />
+                                       asp-for="@Model.Actual!.Id_Empleado_ServicioExtra" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Nombre
+                                Id_empleado
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmMateria"
                                    class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.Nombre" />
+                                       asp-for="@Model.Actual!.Id_empleado" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Telefono
+                                Id_ServicioExtra
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmNota1"
                                    class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.Telefono" />
+                                       asp-for="@Model.Actual!.Id_ServicioExtra" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                Dirreccion
+                                Pago_Servicio
                             </label>
                             <div class="col-lg-6">
                                 <input id="nmNota2"
                                    class="cts_forms form-control"
-                                   asp-for="@Model.Actual!.Dirreccion" />
+                                       asp-for="@Model.Actual!.Pago_Servicio" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-4 control-label">
+                                Precio_Servicio
+                            </label>
+                            <div class="col-lg-6">
+                                <input id="nmNota2"
+                                       class="cts_forms form-control"
+                                       asp-for="@Model.Actual!.Precio_Servicio" />
                             </div>
                         </div>
                     </div>
@@ -124,8 +136,11 @@
                                 Desea borrar la entidad?
                             </h4>
                             <h6 align="left">
-                                @Model.Actual!.Codigo, 
-                                @Model.Actual!.Nombre
+                                @Model.Actual!.Id_Empleado_ServicioExtra,
+                                @Model.Actual!.Id_empleado
+                                @Model.Actual!.Id_ServicioExtra
+                                @Model.Actual!.Pago_Servicio
+                                @Model.Actual!.Precio_Servicio
                             </h6>
                             <br />
                             <br />
@@ -147,7 +162,7 @@
             {
                 <input id="flNombre"
                    class="cts_forms form-control"
-                   asp-for="@Model.Filtro!.Codigo"
+                       asp-for="@Model.Filtro!.Id_Empleado_ServicioExtra"
                    placeholder="Nombre" />
                 <br />
 
@@ -155,7 +170,7 @@
                     <table class="tb_data table table-striped table-bordered table-hover">
                         <tr>
                             <th>
-                                Codigo
+                                Id_Empleado_ServicioExtra
                             </th>
                             <th>
                                 Nombre
@@ -176,28 +191,31 @@
                             {
                                 <tr>
                                     <td>
-                                        @elemento.Codigo
+                                        @elemento.Id_Empleado_ServicioExtra
                                     </td>
                                     <td>
-                                        @elemento.Nombre
+                                        @elemento.Id_empleado
                                     </td>
                                     <td class="cl_hidden">
-                                        @elemento.Telefono
+                                        @elemento.Id_ServicioExtra
                                     </td>
                                     <td class="cl_hidden">
-                                        @elemento.Dirreccion
+                                        @elemento.Pago_Servicio
+                                    </td>
+                                    <td class="cl_hidden">
+                                        @elemento.Precio_Servicio
                                     </td>
                                     <td>
                                         <input type="submit"
                                            value="Modicar"
                                            asp-page-handler="BtModificar"
                                            class="btn btn-secondary"
-                                           asp-route-data="@elemento.Id" />
+                                               asp-route-data="@elemento.Id_Empleado_ServicioExtra" />
                                         <input type="submit"
                                            value="Borrar"
                                            asp-page-handler="BtBorrarVal"
                                            class="btn btn-secondary"
-                                           asp-route-data="@elemento.Id" />
+                                               asp-route-data="@elemento.Id_Empleado_ServicioExtra" />
                                     </td>
                                 </tr>
                             }
