--- a/asp_presentaciones/Pages/Ventanas/Empleados_ServiciosExtras.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Empleados_ServiciosExtras.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model asp_presentacion.Pages.Ventanas.AuditoriaModel
+@model asp_presentacion.Pages.Ventanas.Empleados_ServiciosExtrasModel
 @{
     ViewData["Titulo"] = "";
 }
@@ -10,7 +10,7 @@
             @Html.AntiForgeryToken()
 
             <div align="left">
-                <h3>Auditoria</h3>
+                <h3>Empleados_ServiciosExtras</h3>
             </div>
             <div align="left"
                  class="bt_panel_buttons">
