Correxion de errores en index, lib_dominio, mensajes, ya funka.

--- a/asp_presentaciones/Pages/Ventanas/Auditorias.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Auditorias.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model asp_presentacion.Pages.Ventanas.AuditoriasModel
 @{
-    ViewData["Titulo"] = "";
+    ViewData["Titulo"] = "Auditoria";
 }
 <center>
     <div>
