--- a/asp_presentaciones/Pages/Ventanas/Empleados.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Empleados.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model asp_presentacion.Pages.Ventanas.EmpleadosModel
 @{
-    ViewData["Titulo"] = "";
+    ViewData["Titulo"] = "Empleados";
 }
 <center>
     <div>
